<resources>
    <string name="app_name">Taxnote</string>
    <string name="Expense">Expense</string>
    <string name="Income">Income</string>
    <string name="Entry">Entry</string>
    <string name="History">History</string>
    <string name="report">Overview</string>
    <string name="Settings">Settings</string>
    <string name="Update">Update</string>
    <string name="Details">details</string>
    <string name="Price">Price</string>
    <string name="Delete">Delete</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="edit_entry">Edit</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="SummaryActivity_no_select">Skip</string>
    <string name="SummaryActivity_nex">Skip</string>
    <string name="SummaryActivity_select">Summary</string>
    <string name="SummaryActivity_footer">New Summary</string>
    <string name="MainActivity_entry_tab">Entry</string>
    <string name="MainActivity_history_tab">History</string>
    <string name="MainActivity_settings_tab">Settings</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm_message">Are you sure to delete it?</string>
    <string name="Error">Error</string>
    <string name="please_enter_price">Please enter the price.</string>
    <string name="history_data_empty">Please enter data from Entry tab.</string>
    <string name="using_this_account_in_entry_already">You have records using this category, please delete them from the History.</string>
    <string name="cant_del_active_account">You can't delete the account you are using now, please select other account and try again.</string>
    <string name="confirm_entry_del_for_reason_title">Delete Entries</string>
    <string name="cant_del_cate_error">You have [%2$d] entries using [%1$s].  Please delete these entries before you delete the account.\n\nIf you use multiple books with Taxnote Cloud, the below button only deletes entries in the book you are using now.</string>
    <string name="del_data_has_seleted_cate">Delete %1$d Entries</string>
    <string name="confirm_to_del_all_data_has_reason">Are you sure to delete %2$d entries using [%1$s] from your history?</string>
    <string name="bulk_del_complete">Entries using [%1$s] have been deleted and the category has been deleted.</string>
    <string name="no_surplus_bar_graph">Carried Balance Bar Chart doesn\'t show negative balance data, only shows positive balance.</string>
    <string name="email_already_use">The email address is already in use.</string>
    <string name="entry_tab_fragment_date">Date</string>
    <string name="entry_tab_fragment_account">Account</string>
    <string name="entry_tab_fragment_account2">Account</string>
    <string name="entry_tab_fragment_select_reason">Category</string>
    <string name="tap_here_to_set_details">Summary</string>
    <string name="save_data">Register</string>
    <string name="delete_done">Deleted</string>
    <string name="delete_done_after_title">&#160;has been deleted.</string>
    <string name="pin_button">Continuous</string>
    <string name="pin_button_on_message">Continuous Input ON - Fix date and categories</string>
    <string name="pin_button_off_message">Continuous Input OFF</string>
    <string name="rename_subject">Rename or Combine Categories</string>
    <string name="rename_subject_message">If you already made entries using this category, the category name of each data will be updated automatically.\nYou can also combine categories if you rename to the same name of the category.</string>
    <string name="confirm_comb_message">[%1$s] already exists.  Do you want to combine to this category? </string>
    <string name="confirm_subj_comb_title">Combine Categories\n[%1$s] => [%2$s]</string>
    <string name="confirm_subj_comb_message">[%2$s] already exists.  Do you want to combine to this category?  %3$d entries using [%1$s] also will be updated to entries with [%2$s].  (Summaries in Entries will not change.)</string>
    <string name="confirm_subj_comb_message_again">Are you sure to combine to this category? %3$d entries using [%1$s] also will be updated to entries with [%2$s].</string>
    <string name="rename_subj_comb_btn">Combine Categories</string>
    <string name="category_name">Category Name</string>
    <string name="category_desc">Descriptions</string>
    <string name="combined_categories">Combined Categories!</string>
    <string name="date_string_today">Today</string>
    <string name="date_string_format_to_year_month_day_weekday">yyyy/M/d/ E</string>
    <string name="date_string_format_to_year_month_day">yyyy/M/d</string>
    <string name="date_string_format_to_month_day">M/d</string>
    <string name="date_string_format_for_export">yyyy/MM/dd</string>
    <string name="date_string_format_for_custom_range">yyyy_MM_dd</string>
    <string name="list_view_add_reason">New Category</string>
    <string name="list_view_rename">Rename</string>
    <string name="carried_balance">Carried Balance</string>
    <string name="benefits_of_upgrade">About Upgrade</string>
    <string name="taxnote_plus">Taxnote Plus</string>
    <string name="thanks_for_purchase">Thank you for upgrading! Please use this button again when you need to check your status or restore purchases.</string>
    <string name="upgrade_is_active">Active</string>
    <string name="taxnote_plus_descriptions">You can unlock 15 entries limit per month.</string>
    <string name="frequently_asked_questions">Help</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="ask_questions_or_request">Ask Anything</string>
    <string name="version">Version</string>
    <string name="upgrade_to_plus_unlock_the_limit">You can register for free up to 15 entries on the same month.  Please upgrade to Taxnote Plus for unlimited entry.\n\nIf you already upgraded before, you can restore it for free.</string>
    <string name="upgrade">Upgrade</string>
    <string name="share_taxnote">Share Taxnote</string>
    <string name="share_taxnote_title">I like this accounting app. </string>
    <string name="share_taxnote_message">I like this accounting app. https://play.google.com/store/apps/details?id=com.nonapp.taxnote</string>
    <string name="decimal_button">Decimal</string>
    <string name="passcode_button">Passcode Lock</string>
    <string name="taxnote_plus_show_price">$29.99 / year</string>
    <string name="taxnote_cloud_show_price">$4.99 / month</string>
    <string name="taxnote_plus_show_price_tail"> / year</string>
    <string name="taxnote_cloud_show_price_tail"> / month</string>
    <string name="fixed_cate_order">Fix Category Order</string>
    <string name="fixed_cate_order_message">This option makes the ordering the same as your category order in the Input.</string>
    <string name="combine_all_accounts">Combine All Accounts</string>
    <string name="combine_all_accounts_message">Show data with all combined data of accounts you created in the settings.\nIf you don\'t have multiple accounts with Taxnote Cloud, this option doesn\'t change anything.</string>
    <string name="saving_project">Saving Book</string>
    <string name="saving_reason">Saving Category</string>
    <string name="saving_account">Saving Account</string>
    <string name="saving_summary">Saving Summary</string>
    <string name="saving_recurring">Saving Recurring</string>
    <string name="saving_entry">Saving Entry</string>
    <string name="caution">Caution!</string>
    <string name="confirm_cloud_without_plus_msg">You can subscribe to Taxnote Cloud without purchasing Taxnote Plus, but the 15 entries/month limit still remains.\n\nPlease note that you need to subscribe to Taxnote Plus and Taxnote Cloud individually.</string>
    <string name="confirm_cloud_without_plus_msg_again">Are you sure to subscribe to Taxnote Cloud with 15 entries/month limit?\n\nYou can subscribe to Taxnote Cloud without purchasing Taxnote Plus, but the 15 entries/month limit still remains.\n\nPlease note that you need to subscribe to Taxnote Plus and Taxnote Cloud individually.</string>
    <string name="data_export">Export</string>
    <string name="data_export_start">Data Export</string>
    <string name="data_export_range">Period</string>
    <string name="data_export_all_range">All</string>
    <string name="data_export_this_month">This Month</string>
    <string name="data_export_last_month">Last Month</string>
    <string name="data_export_custom_range">Specified Period</string>
    <string name="data_export_begin_date">From</string>
    <string name="data_export_end_date">To</string>
    <string name="character_code">Character Code</string>
    <string name="character_code_select_please">Select Character Code</string>
    <string name="character_code_uff8">UTF8</string>
    <string name="character_code_shiftjis">ShiftJIS</string>
    <string name="csv_format">CSV (for spreadsheets like Excel)</string>
    <string name="yayoi_format">Yayoi Kaikei (JP Software)</string>
    <string name="freee_format">freee (JP Software)</string>
    <string name="mfcloud_format">MFCloud (JP Software)</string>
    <string name="title_activity_data_export_range">DataExportRangeActivity</string>
    <string name="data_export_cant_make_csv">Failed to make a csv file.</string>
    <string name="profit_loss_table">Overview</string>
    <string name="Graph">Charts</string>
    <string name="balance_carry_forward">Carry Forward Balance</string>
    <string name="balance_carry_forward_desc">A previous Balance is carried forward.</string>
    <string name="monthly_closing_date">Finish Date</string>
    <string name="monthly_closing_date_desc">If you select 1st - 14th, the data which ends at the selected date will be shown on the Overview of the previous month.\n\nIf you select the 15th or later, the data which starts from the selected date will be shown on the Overview of the next month.\n\nFor example, if you select 25th, the data between the 25th of the previous month and the 24th of this month will be shown on the Overview of this month.</string>
    <string name="start_month_of_year">First Month of Year</string>
    <string name="start_month_of_year_desc">If you select 4, the data from April of the year to March of the next year will be shown on the Yearly Overview.  You can also combine this with a day number to show Yearly numbers like 10th April 2015 ~ 9th April 2016.</string>
    <string name="alert_time_enable_notify">Set Notification</string>
    <string name="alert_time">Notification Time</string>
    <string name="alert_time_notify_desc">Get a notification to remember your daily data entry.</string>
    <string name="alert_notification_desc">If the notification don\'t work, enable Notifications in the Android Settings => Apps => Taxnote => Notifications.</string>
    <string name="login">Login</string>
    <string name="taxnote_cloud_login_desc">Please login with Taxnote Cloud account. (You can create it after you subscribed to Taxnote Cloud.)</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="password_confrim">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password_desc">Please enter new passwords with over 8 characters in length.</string>
    <string name="update">Update</string>
    <string name="settings_valid">ON</string>
    <string name="settings_invalid">OFF</string>
    <string name="data_export_subject_desc">If you name each account and category with @ and ¥, you can export subCategory and taxCategory in CSV.  If you name an account as [Cash@PettyCash@ExcludedTax], account name is Cash, SubAccount name is PettyCash, and taxCategory is ExcludedTax.</string>
</resources>