<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab1"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/Entry" />
    <item
        android:id="@+id/tab2"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/History" />
    <item
        android:id="@+id/tab3"
        android:icon="@drawable/ic_report_black"
        android:title="@string/profit_loss_table" />

    <!-- //@@ グラフアイコンを差し替える必要あり -->
    <item
        android:id="@+id/tab4"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/Graph" />

    <item
        android:id="@+id/tab5"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/Settings" />
</menu>