<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/data_export"
        android:title="@string/data_export"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/help_in_entry_tab"
        android:title="@string/help"
        android:visible="false"
        app:showAsAction="always" />

    <!-- app:actionViewClass="android.support.v7.widget.SearchView" -->
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/pin_button"
        android:title="@string/pin_button"
        android:visible="false"
        app:showAsAction="always" />
</menu>