<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.taxnoteandroid.entryTab.SummaryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:paddingLeft="16dp"
        android:text="@string/SummaryActivity_no_select" />

    <TextView
        style="@style/standard_font_size"
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/takasa"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:text="@string/SummaryActivity_nex" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:paddingLeft="16dp"
        android:text="@string/SummaryActivity_select" />

    <ListView
        android:id="@+id/reason_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
