<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_background">

    <Switch
        style="@style/font_style_standard"
        android:background="@drawable/selector_background_colors"
        android:id="@+id/notify_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:minHeight="@dimen/cell_height_standard"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/secondary_text"
        android:text="@string/alert_time_enable_notify" />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <LinearLayout
        android:id="@+id/alert_time_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_background_colors"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="@dimen/cell_height_standard"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            style="@style/font_style_standard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/secondary_text"
            android:text="@string/alert_time" />

        <TextView
            android:id="@+id/alert_time_value"
            style="@style/font_style_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray" />
    </LinearLayout>
    <TextView
        style="@style/font_style_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/alert_time_notify_desc"/>
    <TextView
        style="@style/font_style_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/alert_notification_desc"/>

</LinearLayout>
</layout>